--- a/arch/arm/configs/streak7_djsteve_defconfig
+++ b/arch/arm/configs/streak7_djsteve_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.36.4
-# Sat Mar 12 11:34:48 2016
+# Sun Mar 13 22:02:32 2016
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1824,10 +1824,10 @@ CONFIG_SND_HRTIMER=y
 # CONFIG_SND_DYNAMIC_MINORS is not set
 CONFIG_SND_SUPPORT_OLD_API=y
 CONFIG_SND_VERBOSE_PROCFS=y
-# CONFIG_SND_VERBOSE_PRINTK is not set
+CONFIG_SND_VERBOSE_PRINTK=y
 CONFIG_SND_DEBUG=y
-# CONFIG_SND_DEBUG_VERBOSE is not set
-# CONFIG_SND_PCM_XRUN_DEBUG is not set
+CONFIG_SND_DEBUG_VERBOSE=y
+CONFIG_SND_PCM_XRUN_DEBUG=y
 # CONFIG_SND_RAWMIDI_SEQ is not set
 # CONFIG_SND_OPL3_LIB_SEQ is not set
 # CONFIG_SND_OPL4_LIB_SEQ is not set
@@ -1842,8 +1842,9 @@ CONFIG_SND_ARM=y
 CONFIG_SND_SPI=y
 CONFIG_SND_USB=y
 CONFIG_SND_USB_AUDIO=y
-# CONFIG_SND_USB_UA101 is not set
-# CONFIG_SND_USB_CAIAQ is not set
+CONFIG_SND_USB_UA101=y
+CONFIG_SND_USB_CAIAQ=y
+CONFIG_SND_USB_CAIAQ_INPUT=y
 CONFIG_SND_SOC=y
 CONFIG_TEGRA_ALSA=y
 CONFIG_TEGRA_PCM=y
@@ -1851,7 +1852,7 @@ CONFIG_TEGRA_I2S=y
 CONFIG_TEGRA_IEC=y
 CONFIG_TEGRA_GENERIC_CODEC=y
 CONFIG_TEGRA_JACK=y
-# CONFIG_TEGRA_VOODOO_SOUND is not set
+CONFIG_TEGRA_VOODOO_SOUND=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 # CONFIG_SND_SOC_WM8753 is not set
@@ -2093,6 +2094,12 @@ CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_MIDI_GADGET is not set
 # CONFIG_USB_G_PRINTER is not set
 CONFIG_USB_ANDROID=y
+# CONFIG_USB_ANDROID_ACM is not set
+CONFIG_USB_ANDROID_ADB=y
+CONFIG_USB_ANDROID_MASS_STORAGE=y
+CONFIG_USB_ANDROID_MTP=y
+# CONFIG_USB_ANDROID_RNDIS is not set
+CONFIG_USB_ANDROID_ACCESSORY=y
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
