change some code for mic enable

--- a/drivers/net/wireless/Makefile
+++ b/drivers/net/wireless/Makefile
@@ -53,5 +53,8 @@ obj-$(CONFIG_WL12XX)	+= wl12xx/
 
 obj-$(CONFIG_IWM)	+= iwmc3200wifi/
 
+ifneq ($(CONFIG_CFG80211),y)
 obj-$(CONFIG_BCM4329)	+= bcm4329/
-obj-$(CONFIG_BCMDHD)    += bcmdhd/
+else
+obj-$(CONFIG_BCM4330)	+= bcmdhd/
+endif
