--- a/drivers/net/wireless/bcmdhd/Kconfig
+++ b/drivers/net/wireless/bcmdhd/Kconfig
@@ -13,14 +13,14 @@ config BCMDHD
 config BCMDHD_FW_PATH
 	depends on BCMDHD
 	string "Firmware path"
-	default "/system/vendor/firmware/fw_bcmdhd.bin"
+	default "/system/etc/firmware/fw_bcmdhd.bin"
 	---help---
 	  Path to the firmware file.
 
 config BCMDHD_NVRAM_PATH
 	depends on BCMDHD
 	string "NVRAM path"
-	default "/system/vendor/firmware/bcmdhd.cal"
+	default "/system/etc/wifi/bcmdhd.cal"
 	---help---
 	  Path to the calibration file.
 
@@ -45,21 +45,6 @@ config DHD_USE_SCHED_SCAN
 	default n
 	---help---
 	  Use CFG80211 sched scan
-
-config BCMDHD_WIFI_CONTROL_FUNC
-	bool "Use bcmdhd_wlan device"
-	depends on BCMDHD
-	default n
-	---help---
-	  Use this option to get various parameters from architecture specific
-	  bcmdhd_wlan platform device. Say n if unsure.
-
-config BCMDHD_HW_OOB
-	bool "Use out of band interrupt"
-	depends on BCMDHD
-	default n
-	---help---
-	  Use out of band interrupt for card interrupt and wake on wireless.
 
 config DHD_ENABLE_P2P
 	bool "Enable Wifi Direct"
