F2FS Final, BCMDHD tweaks, compile tweaks

--- a/arch/arm/configs/streak7_djsteve_defconfig
+++ b/arch/arm/configs/streak7_djsteve_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.36.4
-# Wed Mar 16 22:30:01 2016
+# Sun Mar 20 21:20:17 2016
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -2406,6 +2406,10 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ROMFS_FS is not set
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
