--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -18,7 +18,7 @@ DHDOFILES = aiutils.o bcmsdh_sdmmc_linux.o dhd_linux.o siutils.o bcmutils.o   \
 bcmdhd-objs += wlan_gpio.o
 
 ifneq ($(CONFIG_MACH_SAMSUNG_VARIATION_TEGRA),y)
-DHDCFLAGS += -DCUSTOM_OOB_GPIO_NUM=2 -DOOB_INTR_ONLY -DHW_OOB -DCUSTOMER_HW -DGET_CUSTOM_MAC_ENABLE -DCONFIG_WIFI_CONTROL_FUNC
+DHDCFLAGS += -DCUSTOM_OOB_GPIO_NUM=2 -DOOB_INTR_ONLY -DHW_OOB -DCUSTOMER_HW  -DCUSTOMER_HW2 -DGET_CUSTOM_MAC_ENABLE -DCONFIG_WIFI_CONTROL_FUNC
 endif
 
 ifeq ($(CONFIG_MACH_SAMSUNG_VARIATION_TEGRA),y)
